--- a/views/register.ejs
+++ b/views/register.ejs
@@ -76,14 +76,9 @@
               >
             </div>
             <div class="form-group col-4">
-              <label for="edad">Ingrese su Edad</label>
-              <input
-                type="number"
-                class="form-control"
-                name="age"
-                id="age"
-                aria-describedby="age"
-              />
+              <label for="date">Fecha de nacimiento</label>
+                <input type="date" name="date" class="form-control"> 
+                <i class="glyphicon glyphicon-th"></i>
             </div>
           </div>
 
@@ -177,6 +172,7 @@
           $(this).next(".custom-file-label").html(fileName);
         });
       </script>
+
     </section>
 
     <!--footer/fran -->
