creacion producto, edicion y eliminacion

--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -62,7 +62,9 @@
                     <!-- tipo -->
                     <div class="form-group col-3">
                         <label for="sell_type">Tipo</label>
-                        <select id="sell_type" class="form-control" name="tipo">
+                        <input type="number" name="productoId">
+                        
+                        <!-- <select id="sell_type" class="form-control" name="productoId">
                             <option selected>Seleccione...</option>
                             <option>Cerveza</option>
                             <option>Insumos</option>
@@ -70,7 +72,8 @@
                             <option>Cursos</option>
                             <option>Merchandesing</option>
                             <option>Cursos</option>
-                        </select>
+                        </select> -->
+
                     </div>
                     <!-- categoria -->
                     <div class="form-group col-3">
