--- a/views/products.ejs
+++ b/views/products.ejs
@@ -18,7 +18,7 @@
               </div>
               <div class="container">
                 <div class="row">
-                    <% for( let products of listado ) { %>
+                    <% for( let products of productos ) { %>
                       <div class="col-12 col-sm-6 col-lg-3">
                         <section class="product-box">
                           <a href="/products/<%=products.id%>">
