Arreglo imagen multer

--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -105,8 +105,8 @@
                     <div class="form-group col-4">
                         <p class="mb-1">Primera imagen</p>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="image1" lang="es"  name="image1"/>
-                            <label class="custom-file-label" for="image1">Seleccionar Archivo</label>
+                            <input type="file" class="custom-file-input" id="" lang="es"  name="imagen"/>
+                            <label class="custom-file-label" for="">Seleccionar Archivo</label>
                         </div>
                     </div>
                     <!-- imagen2 -->
