Arreglado modificacion de producto UPDATE  + Redirect

--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -138,9 +138,9 @@
                     </div>
                     <!-- cantidad -->
                     <div class="form-group col-3">
-                        <label for="sell_quantity">Cantidad</label>
+                        <label for="sell_quantity">Stock</label>
                         <input type="number" class="form-control" id="sell_quantity" placeholder="cantidad" aria-describedby="sell_quantity"
-                            name="cantidad"/>
+                            name="stock"/>
                     </div>
                     <!-- descuento -->
                     <div class="form-group col-3 p-2">
