--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -16,7 +16,7 @@
           <!--titulo-->
           <div class="register-title col-12">
             <h2 class="title_categoria">
-              <%= product.titulo %>
+              <%= product.nombre %>
             </h2>
           </div>
           <div class="dropdown-divider"></div>
@@ -27,9 +27,9 @@
             </div>
             <div class="media-body col-6 border-left">
               <!--cantidad-->
-              <h5 class="font-weight-light">Cantidad : <strong><%= product.cantidad %></strong></h4> 
+              <h5 class="font-weight-light">Cantidad : <strong><%= product.stock %></strong></h4> 
               <!--precio-->
-              <h5 class="font-weight-light"> Precio : <strong>$ <%= product.precio %></strong></h5>
+              <h5 class="font-weight-light"> Precio : <strong>$ <%= product.precioUnitario %></strong></h5>
               <!--descuento-->
               <span class=" bg-success text-white rounded-pill p-1"><%= product.descuento %> <i class="fa fa-tag"></i></span>
               <!--rating-->
@@ -39,7 +39,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
-                <a class="link-comments" href=""><%= product.commentarios %> </a>
+                <a class="link-comments" href=""><%= product.comentarios %> </a>
               </div>
             </div>
 
