--- a/views/partials/editButtons.ejs
+++ b/views/partials/editButtons.ejs
@@ -1,7 +1,7 @@
 <div
     class="box-edit col-12 d-flex justify-content-center mt-5 mb-2 border rounded p-2"
 >
-    <a href="/products/<%= product.id%>/edit">
+    <a href="/products/<%= product.id%>/edit/">
         <button type="submit" class="btn btn-outline-secondary mr-2">
             <i class="far fa-edit"></i> Editar Publicación
         </button>
