--- a/views/product-edit-form.ejs
+++ b/views/product-edit-form.ejs
@@ -9,7 +9,7 @@
   <body class="bg_color">
     <!--header/javi -->
     <%- include("partials/header") %>
-     <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 mt-5 mb-5 mr-auto ml-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn"  action="/products/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+     <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 mt-5 mb-5 mr-auto ml-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn" action="/products/<%= product.id %>/edit/" method="POST" enctype="multipart/form-data">
                 <div class="register-title col-12">
                     <h2 class="title_categoria">
                         <i class="fas fa-hand-holding-usd text-black-50"></i></i> Vende por Canilla<strong>Libre</strong>.com
@@ -17,7 +17,7 @@
                 </div>
                 <div class="dropdown-divider"></div>
                 <!-- titulo de venta -->
-                    <h4 class="mb-4 mt-4">Estas editando el producto <%= product.nombre %> <%= product.id %>  </h4>
+                    <h4 class="mb-4 mt-4">Estas editando el producto <%= product.nombre %> | id: <%= product.id %>  </h4>
                 <div class="row align-items-center">
                     <div class="form-group col-9">
                         <label for="sell_title">Título del Anuncio</label>
@@ -103,14 +103,13 @@
                      
                     </div>
                 </div>    
-                    <!-- imagen1 -->
-                <div class="row mt-2 mb-4 justify-content-between">
+                 <!-- imagen1 -->
+                 <div class="row mt-2 mb-4 justify-content-between">
                     <div class="form-group col-4">
                         <p class="mb-1">Primera imagen</p>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="image1" name="image1" lang="es" value="<%= product.image1  %>"/>
-                            <label class="custom-file-label" for="image1">Seleccionar Archivo</label>
-                           
+                            <input type="file" class="custom-file-input" id="" lang="es"  name="imagen"/>
+                            <label class="custom-file-label" for="">Seleccionar Archivo</label>
                         </div>
                     </div>
                 </div>
