CRUD de usuarios terminado

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -23,7 +23,7 @@
           <div class="media row d-flex align-items-center">
             <div class="col-6 align-items-center d-flex justify-content-center mb-4">
               <!--imagen-->
-              <img src="<%= product.image1 %>" alt="product image" width="150" class="product-detail-img" value="Show Images">
+              <img src="/public/upload/<%= product.image1 %>" alt="product image" width="150" class="product-detail-img" value="Show Images">
             </div>
             <div class="media-body col-6 border-left">
               <!--cantidad-->
