--- a/views/profileEdit.ejs
+++ b/views/profileEdit.ejs
@@ -24,7 +24,7 @@
       <div class="row">
         <form
           class="col-xl-7 col-lg-7 col-md-9 col-sm-12 m-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn"
-          action="/auth/profile/editProfile/<%= user.id %> "
+          action="/auth/editar/<%= user.id %>"
           method="POST"
           enctype="multipart/form-data"
         >
@@ -95,6 +95,7 @@
               name="pass"
               id="pass"
               aria-describedby="pass"
+              required
             />
             <small id="passwordHelpBlock" class="form-text text-muted">
               Debe tener entre 4 a 8 caracteres.
@@ -136,8 +137,7 @@
               name="avatar"
               id="avatar"
               lang="es"
-              required
-            />
+                          />
             <label class="custom-file-label" for="avatar"
               >Seleccionar Archivo</label
             >
