--- a/views/product-edit-form.ejs
+++ b/views/product-edit-form.ejs
@@ -57,12 +57,12 @@
                         </select>
                     </div>
                     <!-- tipo de Producto-->
-                    <div class="form-group">
+                    <div class="form-group col-3">
                         <label for="">Tipo de Producto</label> </br>
-                        <select name="productoId">
+                        <select class="custom-select my-1 mr-sm-2" name="productoId">
                             
                                 <option value=" <%= product.productoId %> ">Bebidas</option>
-                                         
+                                                                         
                         </select>
                     </div>
                    <!-- categoria -->
