--- a/views/partials/body_categorias.ejs
+++ b/views/partials/body_categorias.ejs
@@ -211,11 +211,12 @@
                 href="#carouselExampleIndicators"
                 role="button"
                 data-slide="next"
-            >
-                <i
-                    class="carosel-next far fa-arrow-alt-circle-right text-secondary"
-                ></i>
-                <span class="sr-only">Next</span>
+            >         
+                <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                ></span>    
+            <span class="sr-only">Next</span>
             </a>
         </div>
 
