--- a/views/partials/body_ventas.ejs
+++ b/views/partials/body_ventas.ejs
@@ -1,6 +1,6 @@
 <section class="ventas_box ">
     <div class="pepito d-flex justify-content-between align-items-center ml-auto">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-3 d-flex flex-wrap border">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-3 d-flex flex-wrap border-5">
             <a class="venta_box d-flex flex-wrap " href="/products/vender">
                 <h4>crea un anuncio </br>gratis</h4>
                 <p>Publica en solo minutos para que tu producto esté
